--- a/mytest/res/values/strings.xml
+++ b/mytest/res/values/strings.xml
@@ -15,6 +15,12 @@
     <string name="beginCall">开始叫车</string>
     <string name="waitCall">等待叫车</string>
     <string name="cacelCall">取消打车</string>
+    <string name="book_from_hint">从哪出发</string>
+    <string name="book_to_hint">到哪儿去</string>
+    <string name="book_confirm">确认预约</string>
+
+       <string name="book_choose_city">请选择城市</string>
+        <string name="book_time_hint">什么时候出发</string>
     <string name="sureCall">确认叫车</string>
     <string name="beginErr">请获取当前地址后才能叫车！</string>
     <string name="endStation">终点站</string>
